deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app
  labels:
    app: spring-boot-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
        - name: spring-boot-app
          image: us-central1-docker.pkg.dev/spring-cloud-app-344441/my-docker-repo/spring-boot-app:$SHORT_SHA
          ports:
            - containerPort: 8080
